Bug 251145 - [PATCH] Sensors tab and Sensors plasmoid don't see more than 4 cores with 2.6.35 kernels
Summary: [PATCH] Sensors tab and Sensors plasmoid don't see more than 4 cores with 2.6...
Status: RESOLVED FIXED
Alias: None
Product: plasma4
Classification: Unmaintained
Component: widget-systemmonitor (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-09-13 20:59 UTC by Alexey Chernov
Modified: 2011-02-04 10:39 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Patch fixing ksysguard sensors naming (1.19 KB, patch)
2011-02-02 21:24 UTC, Alexey Chernov
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Alexey Chernov 2010-09-13 20:59:02 UTC
Version:           unspecified (using KDE 4.5.1) 
OS:                Linux

Sensors on sensors tab and Sensors plasmoid don't see more than 4 cores with 2.6.35 (or higher) kernel installed. For every 2.6.34.x it's ok. lm-sensors is ok, too, I've tested using sensors command. Here's the output:
#sensors
coretemp-isa-0000
Adapter: ISA adapter
Core 0:      +69.0°C  (high = +86.0°C, crit = +100.0°C)  

coretemp-isa-0001
Adapter: ISA adapter
Core 2:      +60.0°C  (high = +86.0°C, crit = +100.0°C)  

coretemp-isa-0002
Adapter: ISA adapter
Core 0:      +66.0°C  (high = +86.0°C, crit = +100.0°C)  

coretemp-isa-0003
Adapter: ISA adapter
Core 2:      +60.0°C  (high = +86.0°C, crit = +100.0°C)  

coretemp-isa-0004
Adapter: ISA adapter
Core 1:      +68.0°C  (high = +86.0°C, crit = +100.0°C)  

coretemp-isa-0005
Adapter: ISA adapter
Core 3:      +62.0°C  (high = +86.0°C, crit = +100.0°C)  

coretemp-isa-0006
Adapter: ISA adapter
Core 1:      +63.0°C  (high = +86.0°C, crit = +100.0°C)  

coretemp-isa-0007
Adapter: ISA adapter
Core 3:      +61.0°C  (high = +86.0°C, crit = +100.0°C) 

Reproducible: Always
Comment 1 Aaron J. Seigo 2010-09-14 01:09:06 UTC
if you open ksysguard, does it see all the CPU cores, or just 4 as well?
Comment 2 Alexey Chernov 2010-09-14 21:02:55 UTC
Yes, it sees all the CPU cores (8).
Comment 3 Alexey Chernov 2010-11-04 00:25:01 UTC
Reproducible in 4.5.2.
Comment 4 Alexey Chernov 2011-01-31 20:42:12 UTC
Also exists in 4.6.0.
Comment 5 Alexey Chernov 2011-02-02 19:56:55 UTC
Well, I worked at this bug for some time and seem to finally found the problem. It's indeed in ksysguard. The problem is that it relies on uniqueness of label between different sensors which isn't guaranteed at all. I've asked about the problem in lm-sensors mailing-list here: http://news.gmane.org/find-root.php?message_id=%3c201102012323.13215.4ernov%40gmail.com%3e
So I think the problem can be fixed by adding sensor name to the address to make the sensor's address in ksysguard unique. I'll prepare the patch and if you find it possible solution I hope it will be merged.
Comment 6 Alexey Chernov 2011-02-02 21:24:44 UTC
Created attachment 56800 [details]
Patch fixing ksysguard sensors naming

So, here's the patch for ksysguard which fixes sensors naming when working with recent lm-sensors. Instead of sensors_name prefix it uses full generated sensor name.
I hope it will help and can be merged to the main tree.
Comment 7 Aaron J. Seigo 2011-02-04 08:24:23 UTC
Git commit 1aebb4e73b32c4124bbbdf67e76ed93689182b11 by Aaron Seigo.
Committed on 04/02/11 at 08:20.
Pushed by aseigo into branch 'KDE/4.6'.

use sensors name, not label which may not be unique

patch by Alexey Chernov
BUG:251145

M  +4    -2    ksysguard/ksysguardd/Linux/lmsensors.c     

http://commits.kde.org/kde-workspace/1aebb4e73b32c4124bbbdf67e76ed93689182b11
Comment 8 Aaron J. Seigo 2011-02-04 08:24:23 UTC
Git commit 89139f77eb6c150958ea28ac5f5fc3e1bb9b67e2 by Aaron Seigo.
Committed on 04/02/11 at 08:20.
Pushed by aseigo into branch 'master'.

use sensors name, not label which may not be unique

patch by Alexey Chernov
BUG:251145

M  +4    -2    ksysguard/ksysguardd/Linux/lmsensors.c     

http://commits.kde.org/kde-workspace/89139f77eb6c150958ea28ac5f5fc3e1bb9b67e2
Comment 9 Alexey Chernov 2011-02-04 10:39:46 UTC
Thanks a lot for committing