use sensors name, not label which may not be unique

patch by Alexey Chernov
BUG:251145